# NBAforecast

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  claudeInfo.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_gold_features.py  0003_pbp_v3_actions.py
backend/src/nbaforecast/: __init__.py  errors.py
backend/src/nbaforecast/api/: __init__.py  deps.py  main.py  model_provider.py
backend/src/nbaforecast/api/routers/: __init__.py  games.py  live.py  models.py  players.py  props.py  rapm.py  stats.py  teams.py
backend/src/nbaforecast/api/schemas/: __init__.py  common.py  games.py  models.py  players.py  rapm.py
backend/src/nbaforecast/api/services/: __init__.py  games.py  models.py  players.py  props.py  rapm.py  stats.py  teams.py
backend/src/nbaforecast/config/: __init__.py  settings.py
backend/src/nbaforecast/entrypoints/: __init__.py  api_server.py  backfill.py  prefect_worker.py  train.py
backend/src/nbaforecast/explain/: __init__.py  explainers.py  humanizer.py  schema.py
backend/src/nbaforecast/features/: __init__.py  flows.py  game_state.py  materialize.py  player_game.py  primitives.py  team_game.py
backend/src/nbaforecast/ingestion/: __init__.py  checkpoint.py  load.py  parse.py  pipeline.py  result_sets.py  schemas.py  seed.py
backend/src/nbaforecast/ingestion/clients/: __init__.py  impersonate.py  nba_stats.py  pbp.py  retrying.py  throttle.py
backend/src/nbaforecast/ingestion/flows/: __init__.py  deployment.py  ingest.py
backend/src/nbaforecast/live/: __init__.py
backend/src/nbaforecast/models/: __init__.py  base.py  heads.py
backend/src/nbaforecast/models/game_prediction/: __init__.py  baseline.py  margin.py  total.py  win_prob.py
backend/src/nbaforecast/models/props/: __init__.py  baseline.py  regressor.py
backend/src/nbaforecast/models/rapm/: __init__.py  aggregate.py  design.py  evaluate.py  fit.py  snapshots.py  stints.py
backend/src/nbaforecast/models/win_probability/: __init__.py  in_game.py
backend/src/nbaforecast/storage/: __init__.py  database.py  object_store.py  parquet_io.py  parquet_schemas.py  repositories.py
backend/src/nbaforecast/storage/models/: __init__.py  _mixins.py  gold.py  reference.py  serving.py  silver.py
backend/src/nbaforecast/training/: __init__.py  backtest.py  global_explanations.py  metrics.py  registry.py
backend/tests/api/: conftest.py  test_games.py  test_m3_endpoints.py  test_smoke.py  test_team_roster.py  test_win_probability.py
backend/tests/data_validation/: test_silver_validation.py
backend/tests/fixtures/: boxscore.json  pbp.json  possessions.json  schedule.json  shots.json
backend/tests/integration/: __init__.py  test_migration.py
backend/tests/ml/: _synthetic_league.py  _synthetic_player_league.py  test_backtest.py  test_baseline_floor.py  test_explain_schema.py  test_explainers.py  test_explanations.py  test_feature_leakage.py  test_game_margin.py  test_game_state.py  test_game_total.py  test_global_explanations.py  test_humanizer.py  test_materialize.py  test_materialize_player_game.py  test_metrics.py  test_model_head.py  test_player_game.py  test_player_game_leakage.py  test_primitives.py  test_props_baseline.py  test_props_baseline_floor.py  test_props_regressor.py  test_rapm_aggregate.py  test_rapm_design.py  test_rapm_evaluate.py  test_rapm_fit.py  test_rapm_snapshots.py  test_rapm_stints.py  test_registry.py  test_team_game.py  test_train_driver.py  test_win_prob.py
backend/tests/unit/: test_checkpoint.py  test_flows_import.py  test_impersonate.py  test_load.py  test_nba_stats_client.py  test_object_store.py  test_parquet_io.py  test_parquet_schemas.py  test_parse.py  test_pipeline.py  test_retry.py  test_schema.py  test_throttle.py
docs/: project-explainer.md
frontend/: eslint.config.mjs  next.config.ts  openapi.json  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/games/: page.tsx
frontend/src/app/games/[id]/: page.tsx
frontend/src/app/leaderboards/: page.tsx
frontend/src/app/players/: page.tsx
frontend/src/app/players/[id]/: page.tsx
frontend/src/app/rapm/: page.tsx
frontend/src/app/teams/: page.tsx
frontend/src/app/teams/[id]/: page.tsx
frontend/src/components/: game-boxscore.tsx  header-search.tsx  model-provenance.tsx  nba-images.tsx  player-trajectory.tsx  prediction-explainer.tsx  providers.tsx  shot-chart.tsx  site-header.tsx  win-probability-timeline.tsx
frontend/src/components/__tests__/: prediction-explainer.test.tsx
frontend/src/lib/api-client/: client.ts  index.ts  schema.d.ts
frontend/src/lib/hooks/: index.ts  use-game-prediction.ts  use-games.ts  use-models.ts  use-players.ts  use-rapm.ts  use-stats.ts  use-teams.ts
frontend/src/lib/hooks/__tests__/: use-game-prediction.test.tsx  use-games.test.tsx
infra/docker/: Dockerfile.dev.backend  Dockerfile.dev.frontend  Dockerfile.mlflow
infra/postgres/: init-db.sql
plans/: agent-orchestration.md  architecture.md  backend-api.md  concepts-and-terminology.md  data-model.md  data-pipeline.md  engineering-standards.md  explainability.md  feature-engineering.md  frontend-design.md  frontend.md  implementation-plan.md  infrastructure.md  live-system.md  m2-session-protocol.md  master-plan.md  modeling.md  rapm.md  roadmap.md  testing.md
scripts/: dev.ps1  dev.sh
