[project]
name = "nbaforecast"
version = "0.1.0"
description = "Explainable NBA prediction engine — stats hub + calibrated predictions with SHAP explanations"
requires-python = ">=3.12"
dependencies = [
    # ── Data ingestion ────────────────────────────────────────────────────
    "nba-api>=1.5.0",
    "pbpstats>=0.9.0",
    "httpx>=0.27.0",
    # ── Orchestration ─────────────────────────────────────────────────────
    "prefect>=3.0.0",
    # ── Database ──────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    # ── Object store / columnar ───────────────────────────────────────────
    "boto3>=1.43.36",
    "pyarrow>=16.0.0",
    "pandera>=0.20.0",
    # ── Modeling ──────────────────────────────────────────────────────────
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.4.0",
    "xgboost>=2.1.0",
    "scipy>=1.13.0",
    "joblib>=1.4.0",
    # ── Experiment tracking ───────────────────────────────────────────────
    "mlflow>=2.14.0",
    # ── API ───────────────────────────────────────────────────────────────
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.3.0",
    # ── Cache ─────────────────────────────────────────────────────────────
    "redis[hiredis]>=5.0.0",
    # ── Explainability ────────────────────────────────────────────────────
    # shap was an optional "explain" extra until M3.5: since T2.10 the package hard-imports
    # it (models, API), so every environment that forgot the extra crash-looped — a required
    # dep in optional clothing. numba's floor forces the resolver off shap's old numba<0.48
    # bound, which needs numpy.distutils (removed in numpy 2.0) and fails on fresh installs.
    "shap>=0.46.0",
    "numba>=0.60.0",
]

[project.scripts]
nbaforecast-api      = "nbaforecast.entrypoints.api_server:main"
nbaforecast-worker   = "nbaforecast.entrypoints.prefect_worker:main"
nbaforecast-poller   = "nbaforecast.entrypoints.live_poller:main"
nbaforecast-backfill = "nbaforecast.entrypoints.backfill:main"
nbaforecast-train    = "nbaforecast.entrypoints.train:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nbaforecast"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    # API contract tests (tests/api/) seed an in-memory async SQLite DB instead of needing a
    # live Postgres — no DB-specific (ARRAY/JSONB) columns are exercised by that slice.
    "aiosqlite>=0.22.1",
    # type stubs
    "types-redis>=4.6.0",
    "pandas-stubs>=2.2.0",
]

# mypy is run from inside backend/, so mypy_path is relative here.
# The root pyproject.toml carries the same config with mypy_path = ["backend/src"]
# for any tool that runs from the repo root (pre-commit, etc.).
[tool.mypy]
python_version     = "3.12"
strict             = true
namespace_packages = true
explicit_package_bases = true
mypy_path          = ["src"]
plugins            = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-ra -q"

[[tool.mypy.overrides]]
module = [
    "nba_api.*",
    "pbpstats.*",
    "requests.*",
    "boto3.*",
    "botocore.*",
    "pyarrow.*",
    "mlflow.*",
    "shap.*",
    "pandera.*",
    "lightgbm.*",
    "xgboost.*",
    "prefect.*",
    "sklearn.*",
    "joblib.*",
    "scipy.*",
]
ignore_missing_imports = true
